<resources>

    <!--SHARED-->
    <string name="app_name">Exteng</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="network_error">Network error</string>
    <string name="error">Oops, error, wutt?</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="greeting">Hey! Log in or sign up, please</string>
    <string name="categories">Categories</string>
    <string name="categories_caps">CATEGORIES</string>
    <string name="edit_categories">Edit categories</string>
    <string name="basics">Basics</string>
    <string name="house">House</string>
    <string name="city">City</string>
    <string name="time">Time</string>
    <string name="family">Family</string>
    <string name="clothes">Clothes</string>
    <string name="character">Character</string>
    <string name="animals">Animals</string>
    <string name="computer">Computer</string>
    <string name="_continue">Continue</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>
    <string name="choose_image">Choose image</string>
    <string name="set_an_image">Set an image</string>
    <string name="error_user">Unable to create user. Try again</string>
    <string-array name="levels">
        <item>Newbie</item>
        <item>Elementary</item>
        <item>Intermediate</item>
        <item>Upper Intermediate</item>
        <item>Advanced</item>
        <item>Proficiency</item>
    </string-array>
    <string name="know_it">I know it, next</string>
    <string name="learn_it">Let\'s learn it</string>
    <string name="learn_later">Learn later</string>
    <string name="show_word">Show word</string>
    <string name="write_word">Write word</string>
    <string name="choose_word">Choose word</string>
    <string name="translate">Translate</string>
    <string name="check">Check</string>
    <string name="help">Help</string>
    <string name="smile">¯\\_(ツ)_/¯</string>
    <string name="you_already_learn_today">You already learn words today.\nTake a rest and come tomorrow</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="save_info">Save information</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="learn">Learn</string>

    <!--SETTINGS FRAGMENT-->
    <string name="logout">Log out</string>
    <string name="setup_dark_theme">Setup dark theme</string>
    <string name="color_theme">Color theme</string>
    <string name="about">About</string>
    <string name="about_application">About application</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="config_notifications">Configure notifications</string>
    <string name="user_settings">User settings</string>
    <string name="dark_theme_by_schedule">Dark theme by schedule</string>
    <string name="dark_theme">DARK THEME</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="about_caps">ABOUT</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="auto">Auto (system default)</string>


    <!--LOGIN ACTIVITY-->
    <string name="app_desc">Learn english words app.\nFree and easy.</string>
    <string name="select_categories">Select categories you want to learn</string>
    <string name="input_email">First, input your e-mail</string>
    <string name="input_password">OK, now input your password</string>
    <string name="input_confirm_password">You are almost there, confirm your password</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="login">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="email">E-mail</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="choose_categories">Please, choose 5 categories as minimum</string>
    <string name="pick_username">Pick your username, if you want of course</string>
    <string name="skip">Skip</string>


    <!--USER ACTIVITY-->
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email address</string>
    <string name="change_avatar">Change avatar</string>
    <string name="new_email">New email</string>
    <string name="new_username">New username</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="email_has_been_changed">Your e-mail has been changed</string>
    <string name="username_has_been_changed">Your username has been changed</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="password_has_been_changed">Your password has been changed</string>
    <string name="avatar_has_been_changed">Your avatar has been changed</string>


    <!--ABOUT ACTIVITY-->
    <string name="developer_caps">DEVELOPER</string>
    <string name="application_caps">APPLICATION</string>
    <string name="extend_english">Extend English</string>
    <string name="app_version">v0.5.0</string>
    <string name="me">Timur Zadvornov</string>
    <string name="android_developer">Android Developer</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="weazyexe">\@weazyexe</string>
    <string name="open_source_libraries_caps">OPEN SOURCE LIBRARIES</string>
    <string name="gson">GSON</string>
    <string name="gson_desc">JSON parser • v2.8.5 • Google</string>
    <string name="guava">Guava</string>
    <string name="guava_desc">Google core libraries • v26.0 • Google</string>
    <string name="circle_image_view">CircleImageView</string>
    <string name="circle_image_view_desc">Just circle ImageView • v3.0.0 • hdodenhof</string>
    <string name="glide">Glide</string>
    <string name="glide_desc">Media management • v4.9.0 • bumptech</string>
    <string name="card_stack_view">CardStackView</string>
    <string name="card_stack_view_desc">Tinder like swipeable cards • v2.3.2 • yuyakaido</string>


    <!--NOTIFICATIONS-->
    <string name="words_words">Words, words, words!</string>
    <string name="lets_repeat_and_learn">Let\'s repeat and learn new words!</string>
</resources>
