<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:padding="16dp">

    <RadioGroup
            android:id="@+id/radio_group_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/radio_enable"
                android:text="@string/enable"
                android:textSize="16sp"
                android:tag="enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/radio_disable"
                android:text="@string/disable"
                android:textSize="16sp"
                android:tag="disable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/radio_auto"
                android:text="@string/auto"
                android:textSize="16sp"
                android:tag="auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"/>

    </RadioGroup>



</FrameLayout>