<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    app:layout_collapseMode="pin">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/text_header"
                            android:text="@string/about"
                            android:textColor="@color/colorOrange"
                            android:fontFamily="@font/pacifico"
                            android:textSize="26sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="-16dp"/>

                </FrameLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

            <TextView
                    android:text="@string/application_caps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"/>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="8dp"
                    android:transitionName="trtext_about">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                            android:id="@+id/text_application"
                            android:textSize="16sp"
                            android:text="@string/extend_english"
                            android:textColor="@color/colorBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:transitionName="trtext_name"/>

                    <TextView
                            android:text="@string/app_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_application"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                    android:text="@string/developer_caps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"/>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="8dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_name"
                                android:textSize="16sp"
                                android:text="@string/me"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/android_developer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_name"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_twitter"
                                android:textSize="16sp"
                                android:text="@string/twitter"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/weazyexe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_twitter"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_instagram"
                                android:textSize="16sp"
                                android:text="@string/instagram"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/weazyexe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_instagram"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_telegram"
                                android:textSize="16sp"
                                android:text="@string/telegram"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/weazyexe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_telegram"/>

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                    android:text="@string/open_source_libraries_caps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"/>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="8dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_gson"
                                android:textSize="16sp"
                                android:text="@string/gson"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/gson_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_gson"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_guava"
                                android:textSize="16sp"
                                android:text="@string/guava"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/guava_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_guava"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_circle_image_view"
                                android:textSize="16sp"
                                android:text="@string/circle_image_view"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/circle_image_view_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_circle_image_view"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_card_stack_view"
                                android:textSize="16sp"
                                android:text="@string/card_stack_view"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/card_stack_view_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_card_stack_view"/>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                                android:id="@+id/text_glide"
                                android:textSize="16sp"
                                android:text="@string/glide"
                                android:textColor="@color/colorBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/glide_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/text_glide"/>

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>