<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SignupActivity"
        android:id="@+id/layout_signup">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:fontFamily="@font/pacifico"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"/>



    <FrameLayout
            android:id="@+id/loading_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"/>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/form_signup"
            android:padding="8dp">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginEnd="8dp" android:id="@+id/cardView2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.165">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_signup"
                        android:src="@drawable/avatar_placeholder"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="2dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>

                <Button
                        android:id="@+id/load_image_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_an_image"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/avatar_signup"
                        android:layout_marginTop="16dp"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                app:cardElevation="8dp"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/cardView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" app:layout_constraintVertical_bias="0.026">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="32dp">

                <EditText
                        android:id="@+id/email_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:layout_marginBottom="8dp"
                        android:inputType="textEmailAddress"/>

                <EditText
                        android:id="@+id/username_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:layout_marginBottom="8dp"
                        android:inputType="text"/>

                <EditText
                        android:id="@+id/password_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:layout_marginBottom="8dp"
                        android:inputType="textPassword"/>

                <EditText
                        android:id="@+id/confirm_password_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:inputType="textPassword"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>