<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:src="@drawable/logo1"
            android:layout_width="200dp"
            android:layout_height="200dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.174"
            android:id="@+id/imageView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:text="@string/app_desc"
            android:textSize="16sp"
            android:textAlignment="center" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/textView"/>

    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/create_account"
            android:textColor="@color/colorWhite"
            android:onClick="onCreateButtonClick"
            android:id="@+id/create_button" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.392"/>

    <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/sign_in"
            android:layout_width="200dp"
            android:textColor="?android:colorAccent"
            android:onClick="onSignInButtonClick"
            android:layout_height="wrap_content" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/create_button" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.031"/>

</androidx.constraintlayout.widget.ConstraintLayout>